--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "html-webpack-plugin": "^4.0.0-beta.8",
     "http-server": "^0.11.1",
     "image-webpack-loader": "^5.0.0",
+    "imagemin-webp-webpack-plugin": "^3.2.2",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
